# session-smc-trading-bot

./: .env.example  .gitignore  ADR_0004_IMPLEMENTATION_REPORT.md  AGENTS.md  ARCHITECTURE_STABILIZATION_ROADMAP.md  CI_READINESS_REPORT.md  CLAUDE.md  CURRENT_ARCHITECTURE.md  DEMO_RUNTIME_INTEGRATION_REPORT.md  DEMO_SMOKE_TEST_SPRINT.md  GOVERNANCE_BASELINE_REPORT.md  IMPLEMENTATION_GAP_MATRIX.md  LOOKAHEAD_AUDIT.md  Makefile  PROJECT_GAP_ANALYSIS.md  README.md  SYSTEM2_MASTER_PLAN.md  UPDATED_PROJECT_READINESS_SCORECARD.md  WORKFLOW_VALIDATION_REPORT.md  alembic.ini  audit_strategy.py  bot.py  execution_events.py  execution_gate.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements.in  requirements.txt  run_pipeline.py  smc_trading_checklist_accurate.html  strategy_validation_matrix.yaml
.claude/: AGENTS.md  AGENT_RESPONSIBILITY_MATRIX.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
New Dashborad/: README.md  package.json  server.ts  vite.config.ts
adaptive/: __init__.py  run_shadow.py
agent/: coding_rules.md  implementation_rules.md  prompt_templates.md
agents/: __init__.py
agtrade/: __init__.py  admin.py  cli.py  research.py  strategy.py
application/: __init__.py  admin_service.py  production_service.py  research_service.py
approval_package/: __init__.py  package_builder.py  package_registry.py  package_report.py  package_signature.py  package_validator.py
archive/: README.md  scratch_deepseek_test.py
backtest_output_d2_holdout/: holdout_result.json
backtest_output_d2_optimized/: REPORT.md  optimization_results.json  summary.json
config/: approval.yaml  broker_symbol_mapping.yaml  config.json  cost_profile_vantage_v1.json  costs.json  data.yaml  demo.yaml  demo_validation.yaml  llm.yaml  professional_dataset.yaml  research_benchmark.yaml  research_engine.yaml  research_queue.yaml  risk.yaml  storage_policy.yaml  strategy.yaml  strategy_catalog.yaml  strategy_change_pipeline.yaml  strategy_optimization_diagnostics.yaml  strategy_portfolio.yaml  symbols.yaml  testing.yaml  tick_dataset.yaml  validation.yaml
core/: __init__.py  base_strategy.py  broker_interface.py  circuit_breaker.py  portfolio_manager.py  signal.py  signal_router.py  strategy_registry.py  trade_journal_db.py
dashboard/: app.py  audit_log.py  auth.py  control_state.py  events.py  gemini_service.py  index.html  rbac.py  (+10 more)
(+1734 files in other folders)
