[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agtrade-platform"
version = "0.1.0"
description = "Trading research, governance, and execution platform"
requires-python = ">=3.12"

[project.scripts]
agtrade = "agtrade.cli:main"

[tool.setuptools.packages.find]
include = [
  "adaptive*",
  "agents*",
  "agtrade*",
  "application*",
  "core*",
  "dashboard*",
  "data*",
  "db*",
  "execution*",
  "execution_simulator*",
  "execution_validation*",
  "models*",
  "pipeline*",
  "production*",
  "research*",
  "session_smc*",
  "shared*",
  "strategies*",
  "strategy*",
  "strategy_audit*",
  "strategy_validation*",
  "svos*",
  "virtual_broker*",
]
exclude = [
  "archive*",
  "tests*",
]

[tool.ruff]
target-version = "py312"
line-length = 140
exclude = [
  "archive",
  "data",
  "logs",
  "reports",
  "research_db",
  "research_sweep",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
files = ["svos/lifecycle", "svos/shared"]
exclude = "^(archive|data|logs|reports|research_db|research_sweep)/"
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
# Legacy modules that pre-date the mypy gate — suppress transitively-found errors
# without blocking new code in svos/lifecycle and svos/shared.
module = [
    "execution.*",
    "execution_simulator.*",
    "strategy_validation.*",
    "research.*",
    "svos.application.*",
    "svos.orchestration.*",
    "svos.governance.*",
    "svos.api.*",
    "svos.adapters.*",
    "svos.registry.*",
    "svos.reports.*",
    "db.*",
]
ignore_errors = true

[tool.pytest.ini_options]
# Run svos coverage on every test invocation.
# Pass --no-cov to skip (e.g. during rapid iteration: pytest --no-cov tests/svos/).
addopts = "--cov=svos --cov-report=term-missing --cov-fail-under=67"
testpaths = ["tests"]

[tool.coverage.run]
source = ["svos"]
omit = [
  "svos/ui/*",
  "svos/experiments/*",
]

[tool.coverage.report]
# Lines that are empty, comments, or __all__ / import guards are excluded.
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "^\\s*\\.\\.\\.$",
  "raise NotImplementedError",
]
show_missing = true
